--- a/example2b/pom.xml
+++ b/example2b/pom.xml
@@ -1,6 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>apache.felix.tutorial</groupId>
   <artifactId>example2b</artifactId>
   <name>Example 2b</name>
 
@@ -31,7 +30,7 @@
       <artifactId>org.osgi.core</artifactId>
     </dependency>
     <dependency>
-      <groupId>apache.felix.tutorial</groupId>
+      <groupId>org.danielsoft.learn</groupId>
       <artifactId>example2</artifactId>
     </dependency>
   </dependencies>
