--- a/pom.xml
+++ b/pom.xml
@@ -10,20 +10,31 @@
     <module>example1</module>
     <module>example2</module>
     <module>example2b</module>
+     <module>tutorial-runner</module>
   </modules>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>2.3.7</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
   <dependencyManagement>
     <dependencies>
@@ -33,11 +44,20 @@
         <version>1.4.0</version>
       </dependency>
       <dependency>
-      <groupId>apache.felix.tutorial</groupId>
-      <artifactId>example2</artifactId>
+      <groupId>org.danielsoft.learn</groupId>
+      <artifactId>example1</artifactId>
       <version>${project.version}</version>
       </dependency>
-      
+        <dependency>
+            <groupId>org.danielsoft.learn</groupId>
+            <artifactId>example2</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.danielsoft.learn</groupId>
+            <artifactId>example2b</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 
