--- a/tutorial-runner/pom.xml
+++ b/tutorial-runner/pom.xml
@@ -18,6 +18,11 @@
             <groupId>org.danielsoft.learn</groupId>
             <artifactId>example1</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.danielsoft.learn</groupId>
+            <artifactId>example2</artifactId>
+        </dependency>
+
     </dependencies>
 
  </project>
