--- a/tutorial-runner/pom.xml
+++ b/tutorial-runner/pom.xml
@@ -22,7 +22,10 @@
             <groupId>org.danielsoft.learn</groupId>
             <artifactId>example2</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.danielsoft.learn</groupId>
+            <artifactId>example2b</artifactId>
+        </dependency>
     </dependencies>
 
  </project>
