--- a/tutorial-runner/pom.xml
+++ b/tutorial-runner/pom.xml
@@ -1,31 +1,34 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<artifactId>apache-felix-tutorial</artifactId>
+		<groupId>org.danielsoft.learn</groupId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 
-    <parent>
-        <artifactId>apache-felix-tutorial</artifactId>
-        <groupId>org.danielsoft.learn</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+	<artifactId>tutorial-runner</artifactId>
+	<name>OSGi Framework Runner</name>
+	<packaging>pom</packaging>
 
-    <artifactId>tutorial-runner</artifactId>
-    <name>OSGi Framework Runner</name>
-    <packaging>pom</packaging>
+	<dependencies>
+		<dependency>
+			<groupId>org.danielsoft.learn</groupId>
+			<artifactId>example1</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.danielsoft.learn</groupId>
+			<artifactId>example2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.danielsoft.learn</groupId>
+			<artifactId>example2b</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.danielsoft.learn</groupId>
+			<artifactId>example3</artifactId>
+		</dependency>
+	</dependencies>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.danielsoft.learn</groupId>
-            <artifactId>example1</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.danielsoft.learn</groupId>
-            <artifactId>example2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.danielsoft.learn</groupId>
-            <artifactId>example2b</artifactId>
-        </dependency>
-    </dependencies>
-
- </project>
+</project>
