--- a/english-dictionary-service/pom.xml
+++ b/english-dictionary-service/pom.xml
@@ -8,10 +8,10 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>example2b</artifactId>
+	<artifactId>english-dictionary-service</artifactId>
+	<name>English Dictionary</name>
 	<packaging>bundle</packaging>
-	<name>French Dictionary</name>
-	<description>A bundle that registers a French dictionary service.</description>
+	<description>A bundle that registers an English dictionary service.</description>
 
 	<build>
 		<plugins>
@@ -21,7 +21,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Bundle-Activator>tutorial.example2b.Activator</Bundle-Activator>
+						<Bundle-Activator>tutorial.example2.Activator</Bundle-Activator>
 					</instructions>
 				</configuration>
 			</plugin>
@@ -29,11 +29,6 @@
 	</build>
 
 	<dependencies>
-		<!-- Internal -->
-		<dependency>
-			<groupId>org.danielsoft.learn</groupId>
-			<artifactId>example2</artifactId>
-		</dependency>
 		<!-- OSGi Alliance -->
 		<dependency>
 			<groupId>org.apache.felix</groupId>
