--- a/tutorial-runner/pom.xml
+++ b/tutorial-runner/pom.xml
@@ -15,7 +15,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.danielsoft.learn</groupId>
-			<artifactId>example1</artifactId>
+			<artifactId>simple-service-listener</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.danielsoft.learn</groupId>
