--- a/tutorial-runner/pom.xml
+++ b/tutorial-runner/pom.xml
@@ -33,6 +33,10 @@
 			<groupId>org.danielsoft.learn</groupId>
 			<artifactId>robust-dictionary-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.danielsoft.learn</groupId>
+			<artifactId>service-tracker-dictionary-client</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
