--- a/english-dictionary-service/pom.xml
+++ b/english-dictionary-service/pom.xml
@@ -34,6 +34,11 @@
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
+		<!-- Internal -->
+		<dependency>
+			<groupId>org.danielsoft.learn</groupId>
+			<artifactId>dictionary-service</artifactId>
+		</dependency>
 		<!-- Testing -->
 		<dependency>
 			<groupId>org.mockito</groupId>
