--- a/tutorial-runner/pom.xml
+++ b/tutorial-runner/pom.xml
@@ -19,6 +19,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.danielsoft.learn</groupId>
+			<artifactId>dictionary-service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.danielsoft.learn</groupId>
 			<artifactId>english-dictionary-service</artifactId>
 		</dependency>
 		<dependency>
