--- a/tutorial-runner/pom.xml
+++ b/tutorial-runner/pom.xml
@@ -13,10 +13,12 @@
 	<packaging>pom</packaging>
 
 	<dependencies>
+		<!--
 		<dependency>
 			<groupId>org.danielsoft.learn</groupId>
 			<artifactId>simple-service-listener</artifactId>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.danielsoft.learn</groupId>
 			<artifactId>dictionary-service</artifactId>
@@ -29,6 +31,7 @@
 			<groupId>org.danielsoft.learn</groupId>
 			<artifactId>french-dictionary-service</artifactId>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>org.danielsoft.learn</groupId>
 			<artifactId>dictionary-client</artifactId>
@@ -40,6 +43,11 @@
 		<dependency>
 			<groupId>org.danielsoft.learn</groupId>
 			<artifactId>service-tracker-dictionary-client</artifactId>
+		</dependency>
+		-->
+		<dependency>
+			<groupId>org.danielsoft.learn</groupId>
+			<artifactId>swing-dictionary-client</artifactId>
 		</dependency>
 	</dependencies>
 
